--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a coding student</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Chromatica</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Riding my bike</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Dog walker for Ariana Grande's dogs</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Philadelphia</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>all of the reasons</p>
     </section>
 
     <footer id="footer">
